--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87161c8c",
+   "id": "b0d019d1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6b2ada",
+   "id": "7cf72253",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67586b0b",
+   "id": "7b3193fc",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48870f07",
+   "id": "82d1dbbc",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b306f8c",
+   "id": "880912f8",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096e527d",
+   "id": "e5cfb15c",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8d3efa2",
+   "id": "81ad8d89",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:29.087575Z",
-     "iopub.status.busy": "2024-06-15T10:34:29.087360Z",
-     "iopub.status.idle": "2024-06-15T10:34:33.340397Z",
-     "shell.execute_reply": "2024-06-15T10:34:33.339827Z"
+     "iopub.execute_input": "2024-06-15T12:38:04.730930Z",
+     "iopub.status.busy": "2024-06-15T12:38:04.730730Z",
+     "iopub.status.idle": "2024-06-15T12:38:09.507199Z",
+     "shell.execute_reply": "2024-06-15T12:38:09.506527Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c66aef7",
+   "id": "81efcca0",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e555fa1f",
+   "id": "89b861f3",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf42ae9",
+   "id": "95179681",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0571ef",
+   "id": "fcf05820",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd7c1414",
+   "id": "6109b7cc",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ffb9f12",
+   "id": "410dfdbd",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c9a448",
+   "id": "e0ceb240",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc6e020",
+   "id": "03c25e9c",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec8aba45",
+   "id": "95f9e3a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:33.343342Z",
-     "iopub.status.busy": "2024-06-15T10:34:33.342745Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.215278Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.214692Z"
+     "iopub.execute_input": "2024-06-15T12:38:09.510264Z",
+     "iopub.status.busy": "2024-06-15T12:38:09.509781Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.645349Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.644729Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f91d851",
+   "id": "71fbffd6",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a36d7c94",
+   "id": "14454c77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.217690Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.217493Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.221133Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.220496Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.647892Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.647684Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.651513Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.650962Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60705f20",
+   "id": "c92d8fd4",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9883b7",
+   "id": "fa37fef5",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "346a1041",
+   "id": "f6ae904f",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c9e9d2",
+   "id": "52eca54d",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ed8dd88e",
+   "id": "89867a9a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.223768Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.223192Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.269041Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.268441Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.654147Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.653628Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.702577Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.701899Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb4bc04",
+   "id": "99ae8c9f",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3c0f90c6",
+   "id": "efb50631",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.271543Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.271173Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.338433Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.337800Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.705200Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.704682Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.779108Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.778462Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bedd957",
+   "id": "5f1dbe93",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68af5181",
+   "id": "8f98b115",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e0126fd4",
+   "id": "a7f85315",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.341240Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.340731Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.370438Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.369826Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.781639Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.781257Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.814823Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.814168Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15ddfe19",
+   "id": "e3da2c97",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb0ea81f",
+   "id": "1e21a1d8",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "807621be",
+   "id": "a07a1649",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d830ac8",
+   "id": "4fe6d88d",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2039a030",
+   "id": "3f4dfa76",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70ab6576",
+   "id": "fde8fa4d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.373308Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.372840Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.377432Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.376857Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.817639Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.817135Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.821824Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.821235Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06417f66",
+   "id": "e8632484",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "340a5ac3",
+   "id": "8e3506c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.379879Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.379515Z",
-     "iopub.status.idle": "2024-06-15T10:34:35.382702Z",
-     "shell.execute_reply": "2024-06-15T10:34:35.382133Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.824141Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.823784Z",
+     "iopub.status.idle": "2024-06-15T12:38:11.826963Z",
+     "shell.execute_reply": "2024-06-15T12:38:11.826337Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8658260b",
+   "id": "6a3bbd2f",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d7c89674",
+   "id": "5969a61f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:35.385180Z",
-     "iopub.status.busy": "2024-06-15T10:34:35.384804Z",
-     "iopub.status.idle": "2024-06-15T10:34:37.841266Z",
-     "shell.execute_reply": "2024-06-15T10:34:37.840624Z"
+     "iopub.execute_input": "2024-06-15T12:38:11.829377Z",
+     "iopub.status.busy": "2024-06-15T12:38:11.828971Z",
+     "iopub.status.idle": "2024-06-15T12:38:14.414097Z",
+     "shell.execute_reply": "2024-06-15T12:38:14.413389Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cb375c5",
+   "id": "04798a56",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d9794fc",
+   "id": "e293e1ed",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4acaf0",
+   "id": "53ad11f0",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83998525",
+   "id": "429141b8",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a0fab15e",
+   "id": "2468343e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:37.844169Z",
-     "iopub.status.busy": "2024-06-15T10:34:37.843632Z",
-     "iopub.status.idle": "2024-06-15T10:34:37.847610Z",
-     "shell.execute_reply": "2024-06-15T10:34:37.846956Z"
+     "iopub.execute_input": "2024-06-15T12:38:14.416879Z",
+     "iopub.status.busy": "2024-06-15T12:38:14.416459Z",
+     "iopub.status.idle": "2024-06-15T12:38:14.420570Z",
+     "shell.execute_reply": "2024-06-15T12:38:14.420046Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f0764bbaac0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f218cdc2ac0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d1c0b7",
+   "id": "e1ae43db",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e534a8",
+   "id": "5fefeb86",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4725ce37",
+   "id": "a5c3d221",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19b0dac",
+   "id": "da08530d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2d73e2e3",
+   "id": "e1689cf3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:37.849953Z",
-     "iopub.status.busy": "2024-06-15T10:34:37.849585Z",
-     "iopub.status.idle": "2024-06-15T10:34:37.852830Z",
-     "shell.execute_reply": "2024-06-15T10:34:37.852235Z"
+     "iopub.execute_input": "2024-06-15T12:38:14.423002Z",
+     "iopub.status.busy": "2024-06-15T12:38:14.422618Z",
+     "iopub.status.idle": "2024-06-15T12:38:14.425903Z",
+     "shell.execute_reply": "2024-06-15T12:38:14.425243Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f7290034",
+   "id": "5da430ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T10:34:37.855321Z",
-     "iopub.status.busy": "2024-06-15T10:34:37.854796Z",
-     "iopub.status.idle": "2024-06-15T10:34:38.928633Z",
-     "shell.execute_reply": "2024-06-15T10:34:38.928060Z"
+     "iopub.execute_input": "2024-06-15T12:38:14.428217Z",
+     "iopub.status.busy": "2024-06-15T12:38:14.427842Z",
+     "iopub.status.idle": "2024-06-15T12:38:15.520596Z",
+     "shell.execute_reply": "2024-06-15T12:38:15.519962Z"
     }
    },
    "outputs": [
