--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25b3302a",
+   "id": "adb4d1e7",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa2747a",
+   "id": "812abdcd",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206d5274",
+   "id": "4f48d942",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd07396c",
+   "id": "6319e449",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c080b5cf",
+   "id": "2646c291",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aefa2735",
+   "id": "37a686db",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9590cbcc",
+   "id": "27b09f31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:22.218965Z",
-     "iopub.status.busy": "2024-06-15T13:17:22.218759Z",
-     "iopub.status.idle": "2024-06-15T13:17:26.474402Z",
-     "shell.execute_reply": "2024-06-15T13:17:26.473816Z"
+     "iopub.execute_input": "2024-06-24T18:43:01.088670Z",
+     "iopub.status.busy": "2024-06-24T18:43:01.088231Z",
+     "iopub.status.idle": "2024-06-24T18:43:05.358678Z",
+     "shell.execute_reply": "2024-06-24T18:43:05.358006Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ffe0980",
+   "id": "4917b020",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37e99f36",
+   "id": "25d0add3",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6748e445",
+   "id": "58b2314f",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c769e2b",
+   "id": "cd64035d",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09947ec1",
+   "id": "745d679c",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18cfa68c",
+   "id": "d95cdeab",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e87ead71",
+   "id": "069f4481",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f68f429",
+   "id": "efc76bd9",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f394ba3",
+   "id": "b0f64873",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:26.477368Z",
-     "iopub.status.busy": "2024-06-15T13:17:26.476905Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.335608Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.335005Z"
+     "iopub.execute_input": "2024-06-24T18:43:05.361630Z",
+     "iopub.status.busy": "2024-06-24T18:43:05.361180Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.228993Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.228376Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0bf96a",
+   "id": "dd72b01e",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "099fb018",
+   "id": "d7636009",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.337949Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.337742Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.341628Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.341135Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.231574Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.231200Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.235128Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.234407Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ca016a",
+   "id": "c37a8a78",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62221104",
+   "id": "bf9d81e0",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fcf5b79",
+   "id": "340b134a",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a269f552",
+   "id": "cac87177",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "288f4a2d",
+   "id": "a8a7a18b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.343920Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.343554Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.387329Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.386731Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.237676Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.237211Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.282098Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.281477Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb4dad88",
+   "id": "ca71383d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4febac3",
+   "id": "a1af4c5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.389927Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.389487Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.455950Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.455303Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.284678Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.284297Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.350102Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.349538Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da753f99",
+   "id": "94000cb0",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75696b1",
+   "id": "29caaa23",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc3b816b",
+   "id": "a2ba5934",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.458473Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.458115Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.488161Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.487533Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.352619Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.352252Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.381943Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.381417Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4728cde8",
+   "id": "d6edc02f",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79bf5020",
+   "id": "a0965eb7",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "798fb3d2",
+   "id": "b9a6d97a",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "824b3d48",
+   "id": "59478282",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6788bc7",
+   "id": "330e59a9",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0f8f7126",
+   "id": "35377077",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.490630Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.490290Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.494654Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.494034Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.384507Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.384139Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.388578Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.387922Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e66d5b",
+   "id": "3811c085",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6ca3d9b0",
+   "id": "617b1aab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.496877Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.496550Z",
-     "iopub.status.idle": "2024-06-15T13:17:28.499653Z",
-     "shell.execute_reply": "2024-06-15T13:17:28.498936Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.390846Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.390501Z",
+     "iopub.status.idle": "2024-06-24T18:43:07.393583Z",
+     "shell.execute_reply": "2024-06-24T18:43:07.392943Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c32525bc",
+   "id": "a0d0c131",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc03118a",
+   "id": "270d1d87",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:28.501837Z",
-     "iopub.status.busy": "2024-06-15T13:17:28.501555Z",
-     "iopub.status.idle": "2024-06-15T13:17:30.950091Z",
-     "shell.execute_reply": "2024-06-15T13:17:30.949452Z"
+     "iopub.execute_input": "2024-06-24T18:43:07.395748Z",
+     "iopub.status.busy": "2024-06-24T18:43:07.395404Z",
+     "iopub.status.idle": "2024-06-24T18:43:09.842334Z",
+     "shell.execute_reply": "2024-06-24T18:43:09.841669Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb6e5996",
+   "id": "abd862e7",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086a40ad",
+   "id": "35137bd9",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8197f18",
+   "id": "2a02e175",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea59cf2e",
+   "id": "a6b67541",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1afaf38e",
+   "id": "a8db8cdf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:30.952735Z",
-     "iopub.status.busy": "2024-06-15T13:17:30.952345Z",
-     "iopub.status.idle": "2024-06-15T13:17:30.956240Z",
-     "shell.execute_reply": "2024-06-15T13:17:30.955499Z"
+     "iopub.execute_input": "2024-06-24T18:43:09.844750Z",
+     "iopub.status.busy": "2024-06-24T18:43:09.844552Z",
+     "iopub.status.idle": "2024-06-24T18:43:09.848047Z",
+     "shell.execute_reply": "2024-06-24T18:43:09.847350Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f52ac3deac0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbc08cacea0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14b87f4",
+   "id": "24216f92",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93403737",
+   "id": "7c0ac462",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39191940",
+   "id": "4e39fbe7",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a1506c",
+   "id": "21885515",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9ebade9e",
+   "id": "0d283647",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:30.958777Z",
-     "iopub.status.busy": "2024-06-15T13:17:30.958428Z",
-     "iopub.status.idle": "2024-06-15T13:17:30.961750Z",
-     "shell.execute_reply": "2024-06-15T13:17:30.961069Z"
+     "iopub.execute_input": "2024-06-24T18:43:09.850260Z",
+     "iopub.status.busy": "2024-06-24T18:43:09.850066Z",
+     "iopub.status.idle": "2024-06-24T18:43:09.853060Z",
+     "shell.execute_reply": "2024-06-24T18:43:09.852463Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6efe6cc2",
+   "id": "e32ce192",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T13:17:30.964062Z",
-     "iopub.status.busy": "2024-06-15T13:17:30.963737Z",
-     "iopub.status.idle": "2024-06-15T13:17:32.031486Z",
-     "shell.execute_reply": "2024-06-15T13:17:32.030790Z"
+     "iopub.execute_input": "2024-06-24T18:43:09.855245Z",
+     "iopub.status.busy": "2024-06-24T18:43:09.854926Z",
+     "iopub.status.idle": "2024-06-24T18:43:10.928810Z",
+     "shell.execute_reply": "2024-06-24T18:43:10.928175Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
