deploy: 748ca479e2db59627a78be729ec7de540554beea

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "adb4d1e7",
+   "id": "59786fea",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812abdcd",
+   "id": "fc012025",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f48d942",
+   "id": "e5accd2d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6319e449",
+   "id": "872c529f",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2646c291",
+   "id": "4f143c7c",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a686db",
+   "id": "0b880f80",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "27b09f31",
+   "id": "407dd3bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:01.088670Z",
-     "iopub.status.busy": "2024-06-24T18:43:01.088231Z",
-     "iopub.status.idle": "2024-06-24T18:43:05.358678Z",
-     "shell.execute_reply": "2024-06-24T18:43:05.358006Z"
+     "iopub.execute_input": "2024-06-24T19:00:18.031882Z",
+     "iopub.status.busy": "2024-06-24T19:00:18.031686Z",
+     "iopub.status.idle": "2024-06-24T19:00:22.788269Z",
+     "shell.execute_reply": "2024-06-24T19:00:22.787644Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4917b020",
+   "id": "ca6a4f10",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25d0add3",
+   "id": "ee77001d",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b2314f",
+   "id": "20baa99c",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd64035d",
+   "id": "cfce3c23",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745d679c",
+   "id": "a319dbad",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d95cdeab",
+   "id": "8c1e9f20",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "069f4481",
+   "id": "f08e1c22",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efc76bd9",
+   "id": "328e80f9",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b0f64873",
+   "id": "dd3f32e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:05.361630Z",
-     "iopub.status.busy": "2024-06-24T18:43:05.361180Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.228993Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.228376Z"
+     "iopub.execute_input": "2024-06-24T19:00:22.791324Z",
+     "iopub.status.busy": "2024-06-24T19:00:22.790876Z",
+     "iopub.status.idle": "2024-06-24T19:00:24.916331Z",
+     "shell.execute_reply": "2024-06-24T19:00:24.915672Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd72b01e",
+   "id": "6b766a14",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7636009",
+   "id": "c25aec26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.231574Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.231200Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.235128Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.234407Z"
+     "iopub.execute_input": "2024-06-24T19:00:24.918926Z",
+     "iopub.status.busy": "2024-06-24T19:00:24.918524Z",
+     "iopub.status.idle": "2024-06-24T19:00:24.922532Z",
+     "shell.execute_reply": "2024-06-24T19:00:24.921922Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37a8a78",
+   "id": "b20effa0",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9d81e0",
+   "id": "a94298f1",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "340b134a",
+   "id": "bde1268f",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac87177",
+   "id": "1183028a",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a8a7a18b",
+   "id": "3c798c2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.237676Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.237211Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.282098Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.281477Z"
+     "iopub.execute_input": "2024-06-24T19:00:24.924959Z",
+     "iopub.status.busy": "2024-06-24T19:00:24.924588Z",
+     "iopub.status.idle": "2024-06-24T19:00:24.972402Z",
+     "shell.execute_reply": "2024-06-24T19:00:24.971723Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca71383d",
+   "id": "db1aab93",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a1af4c5b",
+   "id": "8e9c89db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.284678Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.284297Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.350102Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.349538Z"
+     "iopub.execute_input": "2024-06-24T19:00:24.974910Z",
+     "iopub.status.busy": "2024-06-24T19:00:24.974533Z",
+     "iopub.status.idle": "2024-06-24T19:00:25.048216Z",
+     "shell.execute_reply": "2024-06-24T19:00:25.047565Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94000cb0",
+   "id": "f69047a3",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29caaa23",
+   "id": "12697c40",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2ba5934",
+   "id": "5394daf8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.352619Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.352252Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.381943Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.381417Z"
+     "iopub.execute_input": "2024-06-24T19:00:25.050866Z",
+     "iopub.status.busy": "2024-06-24T19:00:25.050500Z",
+     "iopub.status.idle": "2024-06-24T19:00:25.084156Z",
+     "shell.execute_reply": "2024-06-24T19:00:25.083557Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6edc02f",
+   "id": "0d26a9d7",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0965eb7",
+   "id": "471757ad",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9a6d97a",
+   "id": "fae82d08",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59478282",
+   "id": "6326a160",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330e59a9",
+   "id": "87cd86ea",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "35377077",
+   "id": "91e17cae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.384507Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.384139Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.388578Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.387922Z"
+     "iopub.execute_input": "2024-06-24T19:00:25.086851Z",
+     "iopub.status.busy": "2024-06-24T19:00:25.086453Z",
+     "iopub.status.idle": "2024-06-24T19:00:25.091041Z",
+     "shell.execute_reply": "2024-06-24T19:00:25.090371Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3811c085",
+   "id": "79d21d7f",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "617b1aab",
+   "id": "772c58b7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.390846Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.390501Z",
-     "iopub.status.idle": "2024-06-24T18:43:07.393583Z",
-     "shell.execute_reply": "2024-06-24T18:43:07.392943Z"
+     "iopub.execute_input": "2024-06-24T19:00:25.093680Z",
+     "iopub.status.busy": "2024-06-24T19:00:25.093127Z",
+     "iopub.status.idle": "2024-06-24T19:00:25.096472Z",
+     "shell.execute_reply": "2024-06-24T19:00:25.095850Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d0c131",
+   "id": "acb424e7",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "270d1d87",
+   "id": "6907c57e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:07.395748Z",
-     "iopub.status.busy": "2024-06-24T18:43:07.395404Z",
-     "iopub.status.idle": "2024-06-24T18:43:09.842334Z",
-     "shell.execute_reply": "2024-06-24T18:43:09.841669Z"
+     "iopub.execute_input": "2024-06-24T19:00:25.098868Z",
+     "iopub.status.busy": "2024-06-24T19:00:25.098389Z",
+     "iopub.status.idle": "2024-06-24T19:00:27.628900Z",
+     "shell.execute_reply": "2024-06-24T19:00:27.628246Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd862e7",
+   "id": "2bb41be5",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35137bd9",
+   "id": "da797399",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a02e175",
+   "id": "3b74b610",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b67541",
+   "id": "4d79c2af",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a8db8cdf",
+   "id": "de5e63c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:09.844750Z",
-     "iopub.status.busy": "2024-06-24T18:43:09.844552Z",
-     "iopub.status.idle": "2024-06-24T18:43:09.848047Z",
-     "shell.execute_reply": "2024-06-24T18:43:09.847350Z"
+     "iopub.execute_input": "2024-06-24T19:00:27.631639Z",
+     "iopub.status.busy": "2024-06-24T19:00:27.631136Z",
+     "iopub.status.idle": "2024-06-24T19:00:27.635293Z",
+     "shell.execute_reply": "2024-06-24T19:00:27.634495Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbc08cacea0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f7eb81e3ce0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24216f92",
+   "id": "d22199f8",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0ac462",
+   "id": "c0354ef4",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e39fbe7",
+   "id": "339ae3c2",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21885515",
+   "id": "679477fb",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0d283647",
+   "id": "24426e63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:09.850260Z",
-     "iopub.status.busy": "2024-06-24T18:43:09.850066Z",
-     "iopub.status.idle": "2024-06-24T18:43:09.853060Z",
-     "shell.execute_reply": "2024-06-24T18:43:09.852463Z"
+     "iopub.execute_input": "2024-06-24T19:00:27.637645Z",
+     "iopub.status.busy": "2024-06-24T19:00:27.637306Z",
+     "iopub.status.idle": "2024-06-24T19:00:27.640681Z",
+     "shell.execute_reply": "2024-06-24T19:00:27.639963Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e32ce192",
+   "id": "ab66a52f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T18:43:09.855245Z",
-     "iopub.status.busy": "2024-06-24T18:43:09.854926Z",
-     "iopub.status.idle": "2024-06-24T18:43:10.928810Z",
-     "shell.execute_reply": "2024-06-24T18:43:10.928175Z"
+     "iopub.execute_input": "2024-06-24T19:00:27.643289Z",
+     "iopub.status.busy": "2024-06-24T19:00:27.642786Z",
+     "iopub.status.idle": "2024-06-24T19:00:28.768525Z",
+     "shell.execute_reply": "2024-06-24T19:00:28.767869Z"
     }
    },
    "outputs": [
